syntax = "proto3";

package product;

option go_package = "./pkg/pb";

service ProductService {
    rpc FindOne(FindOneRequest) returns (FindOneResponse);
    // rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse);
}

message FindOneData {
    int64 id = 1;
    string name = 2;
    int64 stock = 3;
    int64 price = 4;
}
  
message FindOneRequest{
    int64 id = 1;
}

message FindOneResponse{
    int64 status = 1;
    string error = 2;
    FindOneData data = 3;
}
  
// message DecreaseStockRequest{
//     int64 id = 1;
//     int64 orderId = 2;
// }
// message DecreaseStockResponse{
//     int64 status = 1;
//     string error = 2;
// }
  